kubernetes/apps/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: apps
  labels:
    app.kubernetes.io/name: outline
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: outline
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
