kubernetes/apps/outline/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outline
  namespace: apps
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`docs.mcnees.me`)
      kind: Rule
      middlewares:
        - name: public-chain
          namespace: infrastructure
      services:
        - name: outline
          port: 3000
  tls:
    secretName: legacy-public-wildcard-tls
